# UrsineEngineExamples

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
01-hello-world/: CMakeLists.txt  main.cpp
02-gameobjects-and-components/: CMakeLists.txt  PlayerInputComponent.hpp  PlayerObject.cpp  PlayerObject.hpp  main.cpp
03-signals/: AchievementsTracker.cpp  CMakeLists.txt  PlayerObject.cpp  PlayerObject.hpp  PlayerSignals.cpp  main.cpp
04-meshes/: CMakeLists.txt  TriangleInputComponent.cpp  TriangleInputComponent.hpp  TriangleObject.cpp  TriangleObject.hpp  main.cpp
04-meshes/resources/shaders/: Texture.vert
05-camera-and-3d-objects/: CMakeLists.txt  CameraInputComponent.cpp  CubeObject.cpp  CubeObject.hpp  main.cpp
05-camera-and-3d-objects/resources/shaders/: PerVertexColor.frag
c++/: CMakeLists.txt
c++/01-hello-world/: CMakeLists.txt  main.cpp
c++/02-gameobjects-and-components/: CMakeLists.txt  PlayerInputComponent.cpp  PlayerInputComponent.hpp  PlayerObject.cpp  PlayerObject.hpp  main.cpp
c++/03-signals/: AchievementsTracker.cpp  AchievementsTracker.hpp  CMakeLists.txt  PlayerInputComponent.cpp  PlayerInputComponent.hpp  PlayerObject.cpp  PlayerObject.hpp  PlayerSignals.hpp  main.cpp
c++/04-meshes/: CMakeLists.txt  TriangleInputComponent.cpp  TriangleInputComponent.hpp  TriangleObject.cpp  TriangleObject.hpp  main.cpp
c++/04-meshes/resources/shaders/: PerVertexColor.vert  SolidColor.frag  SolidColor.vert  Texture.vert
c++/04-model-loading/: BackpackInputComponent.cpp  BackpackInputComponent.hpp  BackpackObject.cpp  BackpackObject.hpp  CMakeLists.txt  main.cpp
c++/05-camera-and-3d-objects/: CMakeLists.txt  CameraInputComponent.cpp  CameraInputComponent.hpp  CubeInputComponent.cpp  CubeInputComponent.hpp  CubeObject.cpp  CubeObject.hpp  main.cpp
c++/05-camera-and-3d-objects/resources/shaders/: PerVertexColor.vert  SolidColor.vert
projects/deck-of-illusions/: CMakeLists.txt  CardMeshComponent.cpp  CardMeshComponent.hpp  CardMovementComponent.cpp  CardMovementComponent.hpp  CardObject.cpp  CardObject.hpp  CardObjectRotateComponent.cpp  CardObjectRotateComponent.hpp  DeckInputComponent.cpp  DeckInputComponent.hpp  DeckObject.cpp  DeckObject.hpp  main.cpp
projects/deck-of-illusions/resources/: deck.txt
projects/deck-of-illusions/resources/shaders/: CardShader.frag  CardShader.vert  CardVanishingShader.frag
python/backpack/: backpack.py
python/messenger/: messenger.py
